# cpp-workspace

PA/src/PA/: CMakeLists.txt  date.h  main.cpp
PA2/PA2/: CMakeLists.txt  main.cpp  matrix.h  rotmat.h
PA2/build-PA2-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  PA2  build.ninja  cmake_install.cmake
PA3/build-src-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  src
PA3/hand-in/: complex_number.h  mandelbrot.h  readme.txt
PA3/src/: CMakeLists.txt  complex_number.h  main.cpp  mandelbrot.h
exam/: Exam doc.odt  function_and_area.h
exam/build-exam-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  exam
exam/build-exam2-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  (+3 more)
lektion_1/: opg_1-3.cpp
lektion_2/: opg_2-1.cpp  opg_2-2.cpp  opg_2-3.cpp  opg_2-4.cpp
lektion_3/: CMakeLists.txt  date.h  opg_3-1.cpp
qt_doc/: qdoc.qch  qmake.qch  qtassistant.qch  qtbluetooth.qch  qtcmake.qch  qtconcurrent.qch  qtdatavis3d.qch  qtdbus.qch  qtdesigner.qch  qtdistancefieldgenerator.qch  qtgamepad.qch  qthelp.qch  qtlabscalendar.qch  qtlabsplatform.qch  qtlinguist.qch  qtlocation.qch  qtmultimedia.qch  qtnetwork.qch  qtnetworkauth.qch  qtnfc.qch  qtopengl.qch  qtplatformheaders.qch  qtpositioning.qch  qtprintsupport.qch  qtqml.qch  qtqmlmodels.qch  qtqmltest.qch  qtqmlworkerscript.qch  qtquickcontrols1.qch  qtquickdialogs.qch  qtquickextras.qch  qtscript.qch  qtscripttools.qch  qtscxml.qch  qtsensors.qch  qtserialbus.qch  qtserialport.qch  qtsql.qch  qtsvg.qch  qttestlib.qch  (+10 more)
(+219 files in other folders)
